 Changelog:
    - 30.06.2016 <--> 0.0.1
            Initial script release
    - 01.07.2016 <--> 0.0.2
            Fixing bugs and documentation
    - 03.07.2016 <--> 0.0.3
            Added argument parser
            Provided blacklist for blacklisting characters
    - 03.07.2016 <--> 0.0.4
            Fixed help output
            Fixed errors in help description
    - 03.07.2016 <--> 0.0.5
            Removed the restriction to python 3.5
            Added restriction to python 3
            Added input sanitizing routine
            Fixed typo
            Removed license and changelog from code
            Remove unnecessary quotes
            Arrange imports in alphabetical order to make Flake8 linter happy
            Add .gitignore
            Use textwrap.dedent() to dedent description
            Remove if statements
            Rename char_num to length and char_limit to limit
            Remove unnecessary keyword arguments
            Pass unpacked vars dictionary to make_password()
            Remove unused sys import
            Merge branch 'master' into develop
    - 04.07.2016 <--> 0.0.6 (WIP)
            Changed version numbering to be Semantic Visioning 2.0.0 compatible
                Reference: http://semver.org/#spec-item-2
            Reworked the script to pass the namespace around