@@ -29,3 +29,5 @@
             Changed version numbering to be Semantic Visioning 2.0.0 compatible
                 Reference: http://semver.org/#spec-item-2
             Reworked the script to pass the namespace around
+            Changed version output of the argument parser to reflect the new branch
+            Created module docstring to make linter8 happy
